public/stylesheets/app.css
/* ... */
.no-overflow {
	overflow: hidden;
}

.padding-left {
	padding-left: 10em;
}

.margin-top-small {
	margin-top: 0;
}

.margin-top-2 {
	margin-top: 2em;
}

.margin-bottom-large {
	margin-bottom: 1.5em;
}

.flex-wrap {
	display: flex;
	flex-wrap: wrap;
}

.flex-section {
	flex: 1;
	min-width: 250px;
}

.flex-col {
	flex-direction: column;
}

.flex-justify-center {
	justify-content: center;
}
.flex-justify-betw {
	justify-content: space-between;
}

.flex-justify-start {
	justify-content: flex-start;
}

.flex-align-center {
	align-items: center;
}

.flex-align-left {
	align-content: stretch;
}

.flex-align-start {
	align-content: flex-start;
}

.align-left {
	text-align: left;
}

.title {
	font-size: 1.5em;
	font-weight: bold;
}

.text-black {
	color: black;
}

.no-padding {
	padding: 0;
}

.btn-regular {
	background-color: #6d1110;
	padding: 1em;
}

.width-third {
	width: 33%;
}

/* UNSORTED */

.image-chip {
	display: flex;
	justify-content: center;
	align-content: center;
	width: 25%;
	height: 100px;
	background-size: cover;
	background-position: center;
	opacity: overlay;
}

.image-chip p {
	height: 30px;
	line-height: 30px;
	width: 75%;
	margin: 35px 0;
	background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 50), rgba(0, 0, 0, 50), rgba(0, 0, 0, 0))
}

.bg-draw {
	background-image: url(https://images.unsplash.com/photo-1511854005000-f27912f66ade?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=af66e8fb5115d702cd19c7145e616641&auto=format&fit=crop&w=1050&q=80);
}

.bg-walk {
	background-image: url(https://images.unsplash.com/photo-1521953884764-5484f171c1a2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=372e6ccaef37e81bd31bfe8e8f2da022&auto=format&fit=crop&w=1050&q=80);
}

.bg-cook {
	background-image: url(https://images.unsplash.com/photo-1452251889946-8ff5ea7b27ab?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=563379aa04ffc7a7acaa0b024b0b90fe&auto=format&fit=crop&w=730&q=80);
}

.bg-anime {
	background-image: url(https://images.unsplash.com/photo-1467293622093-9f15c96be70f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c64fdfb93cfc7ef8354665bf1507b30a&auto=format&fit=crop&w=1050&q=80);
}

.bg-vgame {
	background-image: url(https://images.unsplash.com/photo-1486572788966-cfd3df1f5b42?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b4da6b29141c3acee36f4fea461fa211&auto=format&fit=crop&w=1052&q=80);
}

.bg-smash {
	background-image: url(https://images.unsplash.com/photo-1515264741767-1b533a4cdcb7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d1f073745b69faf7429a8b67a6ca7575&auto=format&fit=crop&w=1050&q=80);
}

.bg-bgame {
	background-image: url(https://images.unsplash.com/photo-1506954673998-b077f05b13c7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cbd9462960235b41245689f258d125a8&auto=format&fit=crop&w=1191&q=80);
}

.bg-game-clash {
	background-image: url(https://www.xyztimes.com/wp-content/uploads/2016/01/clash-royale-image-1024x534.jpg);
}

.bg-game-stardew {
	background-image: url(https://assets.rockpapershotgun.com/images//2017/11/stardew-valley-multiplayer.jpg);
}

.bg-game-cup {
	background-image: url(https://assets.pcmag.com/media/images/470358-cuphead-for-pc.jpg?width=1350&height=759);
}

.bg-game-civ {
	background-image: url(https://images-na.ssl-images-amazon.com/images/I/91bAZc%2BV4WL._SL1500_.jpg);
}

.bg-game-wild {
	background-image: url(https://www.zeldadungeon.net/wp-content/uploads/2014/06/Breath-of-the-Wild-Walkthrough.jpg);
}

.bg-game-smash {
	background-image: url(https://ginx.tv/wp-content/uploads/2015/01/smash09.jpg);
}

/* 	////////////////////////////////////////////
RESPONSIVENESS
////////////////////////////////////////////	*/ 
@media screen and (max-width : 760px){

	body {
		font-size: 14px;
	}

	.proj-main {
		height: 300px;
	}

	.proj-sub {
		height: 200px;
	}

	.image-chip {
		width: 50%;
		font-size: 0.6em;
	}

	.bg-proj-small {
		margin-bottom: 75px;
	}

	.section-card {
		width: 95%;
	}

	.company-section {
		align-content: start;
	}

	.company-section p {
		margin: 5px;
	}

	.company-title-section {
		align-content: start;
	}

	#resume .company-section, #about .company-section {
		padding: 1em 2em;
	}

	h1 {
		font-size: 2em;
	}

	h2 {
		font-size: 1.25em;
	}

	.signature {
		width: 100px;
		height: 100px;
	}
	 
	h4 {
		margin-top: 0;
	}

	.icon-circle {
		display: inline-block;
		border-radius: 50%;
		padding: 1.5em;
		background-color: white;
		margin: 50px auto 0 auto;
	}

	.contact {
		margin-top: 75px;
	}

	.width-third {
		width: 100%;
	}

	#resume .most-recent-job {
		padding-top: 60px;
	}
}

/* Fix margins and padding for Edge, which does not currently support clip outside of svg */
@supports (-ms-ime-align:auto) {
    .header {
		padding: 3em 0;
	}

	.banner-red {
		padding: 0.25em 0;
	}

	#lang-soft-edu, .most-recent-company {
		margin-top: 0;
	}

	#resume .most-recent-job {
		padding-top: 0;
	}

	.contact {
		padding: 15px 0;
	}

	.footer {
		padding: 16px;
		margin-top: 0;
	}

	.header, #lang-soft-edu, .contact {
		background-image: url('/images/Chalkboard_small.jpg')
	}
}

